Fix grid alignment and make sure users can adjust the span of rows/columns

--- a/gTile@shuairan/files/gTile@shuairan/3.8/stylesheet.css
+++ b/gTile@shuairan/files/gTile@shuairan/3.8/stylesheet.css
@@ -20,13 +20,11 @@
 .table-element{
     background-color: rgba(240,240,240,0.4);
     border-radius: 3px;
-    margin: 2px;
 }
 
 .table-element:hover, .table-element:activate
 {
     background-color: rgba(240,240,240,0.8);
-    border-radius: 3px;
 }
 
 .top-box
